# parcel

./: .dockerignore  .gitignore  .ignore  Cargo.toml  Dockerfile  README.md  bacon.toml  build.rs  cypress.config.ts  esbuild-bundle.json  package.json  tailwind.config.js  test.db  tsconfig.json
.gitea/workflows/: check.yaml  deploy.yaml
.github/: dependabot.yml
.github/workflows/: beta.yaml  check.yaml  deploy.yaml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  config.rs  context.rs  lib.rs
crates/cli/src/args/: download.rs  host.rs  teams.rs  upload.rs  uploads.rs
crates/cli/src/args/host/: add.rs  check.rs  list.rs  remove.rs  set.rs
crates/cli/src/args/teams/: list.rs
crates/cli/src/args/uploads/: list.rs  set.rs  show.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  lib.rs
crates/model/: Cargo.toml
crates/model/migrations/: 000_initial.sql  001_remaining.sql  003_add_totp.sql  005_custom_slug.sql  006_move_to_uuid.sql  007_teams.sql  009_team_permissions.sql  010_last_access.sql  011_user_default_sort.sql  012_api_keys.sql  012_team_settings.sql  012_upload_previews.sql  013_upload_tags.sql  014_login_attempts.sql  015_team_members_user_index.sql
crates/model/src/: api_key.rs  lib.rs  login_attempt.rs  password.rs  tag.rs  team.rs  upload.rs  user.rs
crates/server/: .gitignore  .ignore  Cargo.toml  build.rs  esbuild-bundle.json  package.json
crates/server/scripts/: global.d.ts  index.ts  init.ts
crates/server/scripts/components/: baseurl.ts  checklist.ts  clipboard.ts  dropdown.ts  modal.ts  select.ts  tag-input.ts  teams.ts  upload.ts
crates/server/scripts/components/upload/: state.ts
crates/server/scripts/components/upload/components/: summary.ts
crates/server/src/: app.rs  args.rs  env.rs  lib.rs
crates/server/src/app/: errors.rs  templates.rs
crates/server/src/app/extractors/: admin.rs  api_key.rs  user.rs
crates/server/src/app/handlers/: admin.rs  api.rs  debug.rs  index.rs  teams.rs  uploads.rs  utils.rs
crates/server/src/app/handlers/admin/: setup.rs  teams.rs  uploads.rs  users.rs
crates/server/src/app/handlers/api/: teams.rs  uploads.rs
crates/server/src/app/handlers/teams/: settings.rs  uploads.rs
crates/server/src/app/handlers/uploads/: download.rs  edit.rs  list.rs  new.rs  tags.rs  transfer.rs  upload.rs
crates/server/src/app/handlers/users/: auth.rs  settings.rs
crates/server/src/app/templates/: context.rs  embed.rs  functions.rs  reload.rs  tailwind.rs
crates/server/src/workers/: generate_previews.rs  previews.rs
crates/server/src/workers/previews/: config.rs
crates/server/style/: main.css
crates/server/style/components/: button.css  form.css  label.css  modal.css  panel.css  select.css  table.css  tabs.css  tag-input.css  tags.css
crates/server/style/utils/: animation.css
crates/server/templates/admin/: index.html  setup.html  teams.html  uploads.html  users.html
crates/server/templates/admin/teams/: page.html  slug.html
crates/server/templates/admin/uploads/: page.html
crates/server/templates/admin/users/: form.html  page.html  username.html
crates/server/templates/errors/: csrf-detected.html
crates/server/templates/teams/: settings.html
crates/server/templates/uploads/: deleted.html  edit.html  list.html  new.html  page.html  share.html  tabs.html  view.html
crates/server/templates/uploads/tags/: edit.html  tags.html
crates/server/templates/user/: remove-totp.html  settings.html  setup-totp.html  signin.html
crates/server/templates/utils/: drop-indicator.html
crates/server/tests/: test_api_list_uploads.rs  test_api_me.rs
crates/server/tests/fixtures/: api_tests.sql
crates/server/tests/utils/: constants.rs  mod.rs  test_client.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/shared/src/types/: api.rs
cypress/: .gitignore  package.json
cypress/cypress/downloads/: test-file.txt
cypress/cypress/e2e/: 004_list.cy.js  005_teams.cy.js  006_team_settings.cy.js
cypress/cypress/fixtures/: teams.json  users.json
cypress/cypress/support/: e2e.js
cypress/e2e/: 001_setup.cy.js  002_signin.cy.js  003_upload.cy.js  004_list.cy.js
cypress/fixtures/: users.json
cypress/support/: e2e.js
etc/: previewers.json
etc/example/: config.toml
media/: masked-screenshot.afdesign  package-open-colored.afdesign
migrations/: 000_initial.sql  002_user_name.sql  004_add_password.sql  006_move_to_uuid.sql  007_teams.sql  008_indices.sql
scripts/: htmx.d.ts  index.ts  init.js  init.ts  shared.js  utils.ts
scripts/components/: checklist.js  checklist.ts  clipboard.js  clipboard.ts  date.js  date.ts  dropdown.ts  modal.js  modal.ts  select.ts  teams.ts  upload.js  upload.ts
scripts/components/upload/: files.js  files.ts  mime.js  state.js  state.ts  utils.js  utils.ts
src/: app.rs  args.rs  env.rs  main.rs  model.rs  utils.rs
src/app/: errors.rs  templates.rs
src/app/extractors/: admin.rs  form.rs  user.rs
src/app/handlers/: admin.rs  debug.rs  index.rs  teams.rs  uploads.rs  users.rs  utils.rs
src/app/templates/: context.rs  functions.rs  reload.rs  tailwind.rs
src/model/: password.rs  team.rs  types.rs  upload.rs  user.rs
style/: main.css
style/components/: button.css  drop.css  dropdown.css  form.css  label.css  modal.css  select.css  table.css  tabs.css  uploads.css
style/utils/: animation.css  icons.css  triangles.css
templates/: admin.html  base.html  index.html  main.html  new-upload.html  tab.html  team.html  upload.html
templates/admin/: index.html  setup.html  teams.html  uploads.html  users.html
templates/admin/teams/: edit.html  form.html  new.html  slug.html
templates/admin/uploads/: cache.html
templates/admin/users/: edit.html  form.html  new.html  username.html
templates/errors/: 404.html  500.html
templates/teams/: settings.html  slug.html
templates/uploads/: deleted.html  edit.html  list.html  new.html  page.html  share.html  stats.html  tabs.html  transfer.html  view.html
templates/user/: remove-totp.html  settings.html  setup-totp.html  signin.html  totp.html
templates/utils/: errors.html
(+23 files in other folders)
