[package]
name = "parcel"
version = "2.0.1"
edition = "2021"
publish = false

[dependencies]
base32 = { version = "0.5" }
base64 = { version = "0.22" }
clap = { version = "4.4", features = ["derive", "env"] }
fast_qr = { version = "0.12", features = ["svg"] }
futures-util = { version = "0.3" }
humansize = { version = "2.1" }
mime = { version = "0.3" }
minijinja = { version = "2.0", features = ["unicode", "loader", "json", "urlencode", "speedups"] }
nanoid = { version = "0.4" }
pbkdf2 = { version = "0.12", features = ["simple"] }
poem = { version = "3.0", features = ["cookie", "csrf", "multipart", "session", "static-files"] }
rand_core = { version = "0.6", features = ["std"] }
rand = { version = "0.8" }
rust-embed = { version = "8.0", features = ["debug-embed", "interpolate-folder-path"] }
serde = { version = "1.0", features = ["derive"] }
serde_html_form = { version = "0.2" }
serde_json = { version = "1.0" }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "time", "uuid"] }
thiserror = { version = "1.0" }
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
time-humanize = { version = "0.1" }
tokio = { version = "1.32", features = ["full"] }
toml = { version = "0.8" }
totp-lite = { version = "2.0" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

esbuild-bundle = { git = "https://github.com/BlakeRain/esbuild-bundle", tag = "v0.2.0" }
poem-route-macro = { git = "https://github.com/BlakeRain/poem-route-macro" }

[build-dependencies]
build-data = { version = "0.2" }
