[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/model",
    "crates/server",
]

[workspace.package]
version = "2.1.4"
edition = "2021"

[workspace.features]
libreoffice = ["parcel-server/libreoffice"]

[workspace.dependencies]
anyhow = { version = "1.0" }
argon2 = { version = "0.5", features = ["std"] }
base32 = { version = "0.5" }
base64 = { version = "0.22" }
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }
humansize = { version = "2.1" }
humantime = { version = "2.2" }
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.9", features = ["std"] }
rand = { version = "0.9" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
shellexpand = { version = "3.1" }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "time", "uuid"] }
thiserror = { version = "2.0" }
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
time-humanize = { version = "0.1" }
tokio = { version = "1.32", features = ["full"] }
toml = { version = "0.9" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

parcel-model = { path = "crates/model" }

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
