[package]
name = "parcel-cli"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "parcel"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
humansize.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
time-humanize.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

config = { version = "0.15", default-features = false, features = ["toml"] }
fs-err = { version = "3.1" }
indicatif = { version = "0.18" }
shellexpand = { version = "3.1" }

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls-native-roots"]

[profile.dist]
inherits = "release"
lto = "thin"
