[package]
name = "parcel-client"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
time.workspace = true

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls-native-roots"]
