[package]
name = "parcel-client"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

parcel-shared.workspace = true

typed-builder = { version = "0.21" }

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls-native-roots"]
