[package]
name = "parcel-server"
version.workspace = true
edition.workspace = true
publish = false

[features]
libreoffice = []

[[bin]]
name = "parcel-server"

[dependencies]
anyhow.workspace = true
argon2.workspace = true
base32.workspace = true
base64.workspace = true
clap.workspace = true
humansize.workspace = true
humantime.workspace = true
pbkdf2.workspace = true
rand.workspace = true
rand_core.workspace = true
shellexpand.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
time-humanize.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

parcel-model.workspace = true

fast_qr = { version = "0.13", features = ["svg"] }
mime = { version = "0.3" }
minijinja = { version = "2.0", features = ["unicode", "loader", "json", "urlencode", "speedups"] }
nanoid = { version = "0.4" }
notify = { version = "8.0" }
poem = { version = "3.1", features = ["anyhow", "cookie", "csrf", "multipart", "session", "static-files"] }
rust-embed = { version = "8.0", features = ["debug-embed", "interpolate-folder-path"] }
serde_html_form = { version = "0.2" }
totp-lite = { version = "2.0" }

validator = { version = "0.20", features = ["derive"] }

esbuild-bundle = { git = "https://github.com/BlakeRain/esbuild-bundle", tag = "v0.3.3" }
poem-route-macro = { git = "https://github.com/BlakeRain/poem-route-macro" }

[build-dependencies]
build-data = { version = "0.3" }
